--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Dazzle</title>
+    <title>All in One Floating Elements</title>
     <meta name="description" content="">
     <meta name="author" content="Septarian Studios">
 
@@ -43,19 +43,19 @@
    <header id="header" class="row">   
 
    		<div class="header-logo">
-	        <a href="index.html">Dazzle</a>
+	        <a href="index.html">All in One Floating Elements</a>
 	    </div>
 
 	   	<nav id="header-nav-wrap">
 			<ul class="header-main-nav">
 				<li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-				<li><a class="smoothscroll"  href="#pricing" title="pricing">Pricing</a></li>
-				<li><a class="smoothscroll"  href="#testimonials" title="testimonials">Testimonials</a></li>
+				<li><a class="smoothscroll"  href="#demo" title="demo">Demo</a></li>
+				<!-- <li><a class="smoothscroll"  href="#testimonials" title="testimonials">Testimonials</a></li> -->
 				<li><a class="smoothscroll"  href="#download" title="download">Download</a></li>	
 			</ul>
 
-            <a href="#" title="sign-up" class="button button-primary cta">Sign Up</a>
+            <a href="#" title="sign-up" class="button button-primary cta">Buy Now</a>
 		</nav>
 
 		<a class="header-menu-toggle" href="#"><span>Menu</span></a>    	
@@ -73,23 +73,25 @@
             <div class="row contents">                     
                 <div class="home-content-left">
 
-                    <h3 data-aos="fade-up">Welcome to Dazzle</h3>
+                    <h3 data-aos="fade-up">Welcome to Spetarian Studios</h3>
 
                     <h1 data-aos="fade-up">
-                        Creative Landing <br>
-                        Page to Showcase <br>
-                        Your Amazing App.
+                        Ultimate WordPress Plugin <br>
+                        to add floating elements <br>
+                        in your Website.
                     </h1>
 
                     <div class="buttons" data-aos="fade-up">
                         <a href="#download" class="smoothscroll button stroke">
                             <span class="icon-circle-down" aria-hidden="true"></span>
-                            Download App
+                            Buy Now
                         </a>
+                        <!-- 
                         <a href="http://player.vimeo.com/video/14592941?title=0&amp;byline=0&amp;portrait=0&amp;color=39b54a" data-lity class="button stroke">
                             <span class="icon-play" aria-hidden="true"></span>
                             Watch Video
                         </a>
+                        -->
                     </div>                                         
 
                 </div>
@@ -289,19 +291,19 @@
     </section> <!-- end about -->  
    
 
-    <!-- pricing
+    <!-- demo
     ================================================== -->
-    <section id="pricing">
-        <div class="row pricing-content">
+    <section id="demo">
+        <div class="row demo-content">
 
-            <div class="col-four pricing-intro">
-                <h1 class="intro-header" data-aos="fade-up">Our Pricing Options</h1>
+            <div class="col-four demo-intro">
+                <h1 class="intro-header" data-aos="fade-up">Our demo Options</h1>
 
                 <p data-aos="fade-up">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium. 
                 </p>
             </div>
 
-            <div class="col-eight pricing-table">
+            <div class="col-eight demo-table">
                 <div class="row">
 
                     <div class="col-six plan-wrap">
@@ -351,15 +353,15 @@
                     </div> <!-- end plan-wrap -->
 
                 </div>               
-            </div> <!-- end pricing-table -->
+            </div> <!-- end demo-table -->
 
-        </div> <!-- end pricing-content -->
-    </section> <!-- end pricing -->
+        </div> <!-- end demo-content -->
+    </section> <!-- end demo -->
 
 
     <!-- Testimonials Section
     ================================================== -->
-    <section id="testimonials">
+    <!--<section id="testimonials">
 
         <div class="row">
             <div class="col-twelve">
@@ -405,13 +407,13 @@
                         </div>                                         
                     </div> 
 
-                </div> <!-- end slides -->
+                </div>  end slides -->
 
-            </div> <!-- end testimonial-slider -->         
+            <!-- </div> --> <!-- end testimonial-slider -->         
             
-        </div> <!-- end flex-container -->
+        <!-- </div> --> <!-- end flex-container -->
 
-    </section> <!-- end testimonials -->
+    <!-- </section> --> <!-- end testimonials -->
     
 
     <!-- download
