--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                     <h3 data-aos="fade-up">Welcome to Spetarian Studios</h3>
 
                     <h1 data-aos="fade-up">
-                        Ultimate WordPress Plugin <br>
-                        to add floating elements <br>
-                        in your Website.
+                        All  in One <br>
+                        Floating Elements <br>
+                        for your Website.
                     </h1>
 
                     <div class="buttons" data-aos="fade-up">
